--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -110,6 +110,7 @@ header {
   height: 100vh;
   background: $gainsboro;
   position: fixed;
+  z-index: 8;
   overflow: auto;
   padding: calc(9rem - 5vw) 1rem;
 
@@ -124,15 +125,6 @@ header {
   @media screen and (min-width: 1200px) {
     padding-inline: 8rem;
   }
-
-  // .overlay {
-  //   position: absolute;
-  //   inset: 0;
-  //   height: 100%;
-  //   width: 100%;
-  //   background: red;
-  //   z-index: 18;
-  // }
 }
 
 .heading {
@@ -227,6 +219,8 @@ header {
   }
 
   .show-list {
+    width: 70%;
+
     ul {
       padding-left: 3rem;
       padding-top: 20px;
