--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -28,6 +28,7 @@
     line-height: 0.6;
     text-transform: uppercase;
     animation: show 750ms ease;
+    padding: 16px 0;
 
     @media screen and (min-width: 1200px) {
       font-size: 5rem;
