fixed background image

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -57,6 +57,7 @@ footer {
       margin-top: -20px;
       width: fit-content;
       margin: 0 auto;
+      padding: 16px 0;
 
       @media screen and (min-width: 1200px) {
         margin-top: -48px;
