--- a/src/scss/layout/_rooms.scss
+++ b/src/scss/layout/_rooms.scss
@@ -64,6 +64,10 @@
               margin-left: auto;
             }
 
+            @media screen and (max-width: 770px) {
+              height: 350px;
+            }
+
             img {
               height: 100%;
             }
