--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -129,7 +129,7 @@ header {
 
 .heading {
   position: absolute;
-  inset: 1.7rem 0 0 0;
+  inset: 30px 0 0 0;
   width: fit-content;
   margin: auto;
   font-size: 3rem;
