--- a/src/scss/layout/_halls.scss
+++ b/src/scss/layout/_halls.scss
@@ -69,6 +69,10 @@
               height: 350px;
             }
 
+            @media screen and (max-width: 480px) {
+              height: 300px;
+            }
+
             img {
               height: 100%;
             }
