--- a/src/scss/layout/_rooms.scss
+++ b/src/scss/layout/_rooms.scss
@@ -68,6 +68,10 @@
               height: 350px;
             }
 
+            @media screen and (max-width: 480px) {
+              height: 300px;
+            }
+
             img {
               height: 100%;
             }
