--- a/src/scss/layout/_rooms.scss
+++ b/src/scss/layout/_rooms.scss
@@ -66,10 +66,12 @@
 
             @media screen and (max-width: 770px) {
               height: 200px;
+              width: 100%;
             }
 
             img {
               height: 100%;
+              width: 100%;
             }
           }
         }
